[package]
name = "load-balancer"
version = "0.4.6"
edition = "2024"
authors = ["86maid"]
description = "Asynchronous load balancing utilities for Rust — including window, time, random, and simple strategies."
license = "MIT"
repository = "https://github.com/86maid/load-balancer"
keywords = ["load-balancer", "balancer", "async", "reqwest", "tokio"]
categories = ["network-programming", "asynchronous"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
rand = "0.9"
reqwest = { version = "0.12", features = ["socks"] }
tokio = { version = "1", features = ["full"] }
